[package]
name = "bevy_pixels"
description = "Bevy plugin that uses Pixels (a tiny pixel buffer) for rendering"
version = "0.10.0"
authors = ["David Cristofaro <david@dtcristo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtcristo/bevy_pixels"
keywords = ["bevy", "pixels", "graphics", "2d", "framebuffer"]
categories = ["game-engines", "graphics", "rendering"]
exclude = ["images/**/*"]

[features]
default = ["render", "x11"]

# Enable default render system.
render = []

# Display server protocol support (X11 is enabled by default).
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]

[dependencies]
bevy = { version = "0.10", default_features = false, features = ["bevy_winit"] }
pixels = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
pollster = "0.3"

[workspace]
members = ["examples/*"]
exclude = ["examples/public"]
